<?xml version="1.0"?>
<package format="3">
  <name>f1tenth_visual_common</name>
  <version>0.1.0</version>
  <description>Common Foxglove visualization and runtime stats package for F1TENTH Gym.</description>
  <maintainer email="student@example.com">F1TENTH Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ackermann_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
